--- a/ES6_Concepts/package.json
+++ b/ES6_Concepts/package.json
@@ -20,11 +20,13 @@
     "webpack": "^4.20.2"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "flickity": "^2.1.2",
     "insane": "^2.6.2",
     "jquery": "^3.3.1",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.11",
-    "slug": "^0.9.1"
+    "slug": "^0.9.1",
+    "socket.io": "^2.3.0"
   }
 }
